feat: improve readability